--- a/PERUGIA/PERUGIA/ar.lproj/Localizable.strings
+++ b/PERUGIA/PERUGIA/ar.lproj/Localizable.strings
@@ -1,7 +1,39 @@
-/* 
-  Localizable.strings
-  PERUGIA
 
-  Created by AryafAlaqabali on 08/04/1443 AH.
-  
-*/
+"OK" = "حسناً";
+"login in Incorrect" = "تسجيل دخول غير صحيح";
+"Setup failed" = "فشل";
+
+
+
+
+"" = "";
+
+"Love" = "حب";
+"Beautiful abstract art" = "الفن التجريدي الجميل";
+"People" = " الناس";
+"Two girls" = "فتاتان";
+"Golden girl" = "الفتاة الذهبية";
+"Girl" = "فتاة";
+"Skulls" = "الجماجم";
+
+"Mona Lisa" = "موناليزا";
+"Charles Chaplin" = "شارلي شابلن";
+"Angelina Jolie" = "انجلينا جولي";
+"Alpert Einstein" = "ألبرت أينشتاين";
+"Elephant" = "فيل";
+"Van Gogh" = "فان جوخ";
+"Adel" = "اديل";
+"Marilyn Monroe" = "مارلين مونرو";
+"Diana Princess" = "الاميرة دينا ";
+"Hoorse" = "حصان";
+
+"Elderly Man" = "رجل مسن";
+"Little Baby" = "طفل صغير";
+"Abdel Halim Hafez" = "عبدالحليم حافظ";
+"Daenerys Targaryen" = "دتيرس تارجارين";
+"Tupac Shakur" = "توباك شاكور";
+"Boy" = "صبي";
+"Charcoal " = "فحم";
+"Mother and daughter1" = "الأم وابنتها";
+
+
