--- a/PERUGIA/PERUGIA/ar.lproj/Main.strings
+++ b/PERUGIA/PERUGIA/ar.lproj/Main.strings
@@ -97,3 +97,21 @@
 
 /* Class = "UILabel"; text = "or"; ObjectID = "vcd-u5-MNA"; */
 "vcd-u5-MNA.text" = "او";
+
+
+"ENw-Bt-0ih.text" = "شكرا لك على استخدام بيروجيا
+
+للتسجيل في العضوية ، يجب عليك:
+
+إثبات بلوغ سن 16
+ 
+أنت توافق على أن أي معلومات مقدمة إلينا عن نفسك عند التسجيل أو في أي وقت هي معلومات صحيحة ودقيقة وحديثة وكاملة.
+
+- لدينا السلطة التقديرية الكاملة لإلغاء ملفك في أي وقت إذا اشتبهنا في أنه قد تم استخدامه من قبل
+
+سلامة:
+نحن نهتم بسلامة مستخدمينا. على الرغم من أننا نعمل على حماية أمان المحتوى والحساب الخاصين بك ، إلا أن PERUGIA لا يمكنها أن تضمن أن الأطراف الخارجية غير المصرح لها ستكون قادرة على هزيمة إجراءاتنا الأمنية. نطلب منك الحفاظ على كلمة المرور الخاصة بك آمنة.
+
+
+إذا أردنا إجراء تغيير كبير على الشروط ، فسنعلمك بذلك. إذا لم تعجبك الشروط الجديدة ، فيرجى التوقف عن استخدام PERUGIA";
+"zi2-GW-KMX.text" = "الموافقه على الشروط";
