--- a/PERUGIA/PERUGIA/ar.lproj/Main.strings
+++ b/PERUGIA/PERUGIA/ar.lproj/Main.strings
@@ -98,6 +98,8 @@
 /* Class = "UILabel"; text = "or"; ObjectID = "vcd-u5-MNA"; */
 "vcd-u5-MNA.text" = "او";
 
+"zi2-GW-KMX.normalTitle" = "الموافقه على الشروط";
+
 
 "ENw-Bt-0ih.text" = "شكرا لك على استخدام بيروجيا
 
