--- a/ATripApp/AdvisorTripApp/ar.lproj/Main.strings
+++ b/ATripApp/AdvisorTripApp/ar.lproj/Main.strings
@@ -136,5 +136,7 @@
 "WKo-Am-ccT.text" = "نظرة عامة";
 "5n7-xy-cxy.text" = " نيويورك";
 "P8c-YX-HgB.text" = "تعال من أجل الأحلام الكبيرة والأضواء المبهرة ، واستمتع بالملاذات المحلية وأفضل بيتزا في العالم";
-"LSA-mA-qdM.configuration.title" = "";
+"LSA-mA-qdM.configuration.title" = "إعرض الخريطة";
+"Etr-rD-fw5.configuration.title" = "الأشياء الذي ينبغي فعلها";
+
 
