--- a/Metalic/Metalic/ar.lproj/Localizable.strings
+++ b/Metalic/Metalic/ar.lproj/Localizable.strings
@@ -5,3 +5,19 @@
   Created by Anas Hamad on 09/04/1443 AH.
   
 */
+
+"Spur gears or straight-cut gears are the simplest type of gear. They consist of a cylinder or disk with teeth projecting radially. Viewing the gear at 90 degrees from the shaft length (side on) the tooth faces are straight and aligned parallel to the axis of rotation. Looking down the length of the shaft, a tooth's cross section is usually not triangular. Instead of being straight (as in a triangle) the sides of the cross section have a curved form (usually involute and less commonly cycloidal) to achieve a constant drive ratio. Spur gears gears mesh together correctly only if fitted to parallel shafts.[1] No axial thrust is created by the tooth loads" = "التروس المحفزة أو التروس المستقيمة هي أبسط أنواع التروس. وهي تتكون من أسطوانة أو قرص به أسنان بارزة قطريًا. عرض الترس عند 90 درجة من طول العمود (الجانب على) تكون وجوه السن مستقيمة ومحاذاة موازية محور الدوران. بالنظر إلى أسفل طول العمود ، لا يكون المقطع العرضي للسن عادةً مثلثيًا. بدلاً من أن يكون مستقيماً (كما في المثلث) ، يكون لجوانب المقطع العرضي شكل منحني (عادةً ما يكون ملتويًا وأقل شيوعًا دائريًا) لتحقيق نسبة محرك ثابتة. تتشابك التروس المحفزة معًا بشكل صحيح فقط إذا تم تركيبها على أعمدة متوازية. [1] لا يتم إنشاء دفع محوري بواسطة أحمال السن ";
+"Rack and pinion define: :is a type of linear actuator that comprises a circular gear (the pinion) engaging a linear gear (the rack) application: automotive market factory in production line shape: bar shaped gear" = "تعريف الرف والجناح:: هو نوع من المشغل الخطي الذي يشتمل على ترس دائري (ترس صغير) يشتمل على تطبيق ترس خطي (الرف): مصنع سوق السيارات في شكل خط الإنتاج: ترس على شكل قضيب";
+"Helical : gears are similar to spur gears except that their teeth are cut at an angle plastic industries elevators compressors.angle cut teath" = "حلزونية: التروس تشبه التروس المحفزة باستثناء أن أسنانها مقطوعة بزاوية من ضواغط المصاعد البلاستيكية";
+"Worm Gear define: A worm drive is a gear arrangement in which a worm (which is a gear in the form of a screw) meshes with a worm wheel (which is similar in appearance to a spur gear). The two elements are also called the worm screw and worm gear , application:  presses, rolling mills, conveying engineering, shape: which is a gear in the form of a screw" = "تعريف الترس الدودي: محرك الدودة عبارة عن ترتيب تروس تتشابك فيه الدودة (التي تكون ترسًا على شكل لولب) مع عجلة دودة (والتي تشبه في مظهرها ترس حفز). والعنصرين هما أيضًا يُسمى اللولب الدودي والعتاد الدودي ، التطبيق: المطابع ، طواحين الدرفلة ، هندسة النقل ، الشكل: وهو ترس على شكل لولب ";
+"An impeller is a rotating component of a centrifugal pump that accelerates fluid outward from the center of rotation, thus transferring energy from the motor that drives the pump to the fluid being pumped." = "المكره عبارة عن مكون دوار لمضخة طرد مركزي يعمل على تسريع السائل إلى الخارج من مركز الدوران ، وبالتالي نقل الطاقة من المحرك الذي يقود المضخة إلى السائل الذي يتم ضخه.";
+"Thank you" = "شكراً لك";
+"Your order has been sent , we will contact you soon for Diamentions for \(String(describing: ValueLabel.text!)) Gears ..." = "تم إرسال طلبك ، وسنتصل بك قريبًا للحصول على أبعادالترس";
+"Wrong" = "خطاْ";
+"UserName or Password is empity" = " اسم المستخدم أو كلمة المرور فارغة ";
+"Passwor don't match" = "كلمة المرور غير متطابقة";
+"You are Registed..!" = "أنت مسجل..!";
+;"تسجيل" = "Registration"
+"UserName or Password is empity" = "اسم المستخدم أو كلمة المرور فارغة";
+;"اسم المستخدم أو كلمة السر غير صحيحة" = "UserName or Password is Wrong"
+
