Project-2 is Finshed

--- a/PROJECT-2/PROJECT-2/ar.lproj/Main.strings
+++ b/PROJECT-2/PROJECT-2/ar.lproj/Main.strings
@@ -45,7 +45,7 @@
 "LvQ-eE-El3.placeholder" = "رقم الجوال";
 
 /* Class = "UIButton"; configuration.title = "Delete From Cach"; ObjectID = "NQw-lE-tBY"; */
-"NQw-lE-tBY.configuration.title" = "حذف من النظام";
+"NQw-lE-tBY.configuration.title" = "حذف من ذاكرة التخزين المؤقت";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "NQw-lE-tBY"; */
 "NQw-lE-tBY.normalTitle" = "Button";
